# rendering-server

./: CMakeLists.txt  README.md  build.bat  rendering-server.sln
include/: utils.h
include/encoder/: encoder_errors.h  io_buffer_pool.h  nvenc_backend.h  nvenc_encoder.h
include/encoding/: encoder_errors.h  io_buffer_pool.h  nvEncodeAPI.h  nvenc_backend.h  nvenc_encoder.h  nvenc_types.h
include/render/: opengl_render.h  opengl_wrappers.h
rendering-server/: rendering-server.vcxproj
src/: CMakeLists.txt  main.cpp
src/encoder/: CMakeLists.txt  io_buffer_pool.cpp  nvenc_backend.cpp  nvenc_encoder.cpp
src/encoder/cuda_kernels/: rgb_to_nv12.cu
src/encoding/: io_buffer_pool.cpp  nvenc_backend.cpp  nvenc_encoder.cpp
src/render/: CMakeLists.txt  opengl_render.cpp  opengl_wrappers.cpp
